fix: improve spacing in new layout

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -96,51 +96,11 @@ p {
   }
 }
 
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-row-gap: 0px;
-
-  @include mq(medium) {
-    grid-template-columns: repeat(8, 1fr);
-    grid-column-gap: 20px;
-  }
-
-  @include mq(large) {
-    grid-template-columns: repeat(12, 1fr);
-    grid-column-gap: 48px;
-  }
-
-  + .grid {
-    margin-top: 36px;
-
-    @include mq(medium) {
-      margin-top: 50px;
-    }
-
-    @include mq(large) {
-      margin-top: 80px;
-    }
-  }
-}
-
 .meta {
-  grid-column: 1 / span 6;
   margin-bottom: 48px;
 
   @include mq(medium) {
-    grid-column: 1 / span 2;
     margin-bottom: 0;
-  }
-
-  @include mq(large) {
-    grid-column: span 3;
-  }
-}
-
-.meta-as-row {
-  @include mq(medium) {
-    grid-row: 2;
   }
 }
 
@@ -159,19 +119,16 @@ p {
   font-size: 24px;
   line-height: 28px;
   grid-row: 1;
-  grid-column: 1 / span 4;
 
   @include mq(medium) {
     font-size: 32px;
     line-height: 36px;
-    grid-column: 3 / span 5;
-    margin-bottom: 48px;
+    margin-bottom: 24px;
   }
 
   @include mq(large) {
     font-size: 48px;
     line-height: 50px;
-    grid-column: 4 / span 6;
   }
 }
 
@@ -190,15 +147,6 @@ p {
 }
 
 .text {
-  grid-column: 1 / span 4;
-
-  @include mq(medium) {
-    grid-column: 3 / span 5;
-  }
-
-  @include mq(large) {
-    grid-column: 4 / span 6;
-  }
 }
 
 .color--secondary {
@@ -215,4 +163,14 @@ p {
   border-radius: 4px;
   padding: 3px 8px 4px;
   font-size: 14px;
+}
+
+.row {
+  & + .row {
+    margin-top: 48px;
+  }
+}
+
+.meta {
+  margin-bottom: 16px;
 }
